📝 Se listan todos los endpoints con OpenAPI
// TODO: completar body de algunas requests
